# EventSystems

./: .bazelignore  .bazelrc  .gitignore  404.html  MODULE.bazel  README.md  build.py  index.html  mkdocs.yml
.github/workflows/: build.yml  docs.yml
Bazel/: index.html
DynamicES/: index.html
DynamicEventSystem/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp
DynamicEventSystem/include/: EventQueue.hpp  HandlersManager.hpp  typedefs.hpp
DynamicEventSystems/: README.md
DynamicEventSystems/diagrams/: dynamic-class-diagram.puml  dynamic-sequence-diagram.puml
DynamicEventSystems/events/: events.hpp
DynamicEventSystems/include/: EventSystem.hpp  TypeEraser.hpp
DynamicEventSystems/src/: EventQueue.cpp  EventSystem.cpp
PubSub/: BUILD.bazel  CMakeLists.txt  README.md  index.html  main.cpp
PubSub/Data/: orders.csv  users.csv
PubSub/diagrams/: pubsub-class-diagram.puml  pubsub-sequence-diagram.puml
PubSub/include/: CsvDataReader.hpp  DataTypes.hpp  IDataReader.hpp  IPublisher.hpp  Publisher.hpp  Subscriber.hpp
PubSub/src/: CsvDataReader.cpp  Publisher.cpp  Subscriber.cpp
PubSub/tests/: CMakeLists.txt  CsvDataReaderLifecycleTests.cpp  PublisherTests.cpp  SubscriberTests.cpp
StaticES/: index.html
StaticEventSystem/: BUILD.bazel  CMakeLists.txt  README.md
StaticEventSystem/app/: BUILD.bazel  CMakeLists.txt
StaticEventSystem/app/include/app/: App.hpp
StaticEventSystem/app/include/app/handlers/: EventHandler1.hpp  EventHandler2.hpp  TestResultsHandler.hpp
StaticEventSystem/app/src/: App.cpp  main.cpp
StaticEventSystem/app/src/handlers/: EventHandler1.cpp  EventHandler2.cpp  TestResultsHandler.cpp
StaticEventSystem/diagrams/: static-class-diagram.puml  static-sequence-diagram.puml
StaticEventSystem/event_system/: BUILD.bazel  CMakeLists.txt
StaticEventSystem/event_system/configs/: event_handlers.json  events_enum.json  events_types.json
StaticEventSystem/event_system/include/core/: EventDispatcher.hpp  EventHandlersMapBuilder.hpp  EventPayloadEraser.hpp  EventQueue.hpp  EventSystem.hpp  EventSystemOperationResult.hpp  EventSystemTimer.hpp  IEventHandler.hpp  LastEventDataHandler.hpp  RegistrationTracker.hpp  SystemTypes.hpp
StaticEventSystem/event_system/include/system/: EventSystem.hpp  EventSystemHelpers.hpp
StaticEventSystem/event_system/scripts/: gen_common.py  generate_all.py  generate_event_handlers.py  generate_event_handlers_map_builder.py  generate_static_headers.py  generate_system_enums.py
StaticEventSystem/event_system/src/core/: EventDispatcher.cpp  EventQueue.cpp  EventSystem.cpp  EventSystemTimer.cpp  LastEventDataHandler.cpp
StaticEventSystem/event_system/src/system/: EventSystem.cpp  EventSystemHelpers.cpp  RegistrationTracker.cpp
StaticEventSystem/event_system/templates/: EventHandlers.cpp.tmpl  EventHandlers.hpp.tmpl  EventHandlersMapBuilder.cpp.tmpl  EventPayloadHelpers.cpp.tmpl  EventPayloadHelpers.hpp.tmpl  EventSenders.cpp.tmpl  EventSenders.hpp.tmpl  LastEventGetters.cpp.tmpl  LastEventGetters.hpp.tmpl  LastEventHelpers.ipp.tmpl
StaticEventSystem/event_system/tests/: CMakeLists.txt  EventSystemTimerTests.cpp
StaticEventSystem/event_system/tests/EventPayloadEraser/: CMakeLists.txt  EventPayloadEraserTests.cpp
StaticEventSystem/event_system/tests/EventSystemTimer/: CMakeLists.txt
StaticEventSystem/event_system/tests/LastEventDataHandler/: CMakeLists.txt  LastEventDataHandlerTests.cpp  TestEventTypeEnum.hpp  TestPayloads.hpp
StaticEventSystem/event_system/tests/LastEventDataHandler/include/core/: EventPayloadHelpers.hpp  LastEventHelpers.ipp  SystemTypes.hpp
adr/0001-static-event-queue-stop-policy/: index.html
adr/0002-last-event-data-visitor-access/: index.html
adr/0003-timer-single-shot-policy/: index.html
adr/0004-flat-array-last-event-data/: index.html
docs/: Bazel.md  DynamicES.md  PubSub.md  StaticES.md  index.md
docs/adr/: 0001-static-event-queue-stop-policy.md  0002-last-event-data-visitor-access.md  0003-timer-single-shot-policy.md  0004-flat-array-last-event-data.md
search/: search_index.json
